# hello-bevy

./: .dockerignore  .gitignore  ADR.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  docker-compose.yml  fix_nodes.sh  fix_remaining_nodes.sh  node_unification_prototype.rs  unified_node_design.md
ADRs/: language-core-system.md
architecture-decision-records/: language-core-system.md
crates/action-system/: Cargo.toml
crates/action-system/src/: acting_character_node.rs  actions.rs  bool_tokens.rs  character_hp_from_node.rs  character_hp_value_node.rs  character_nodes.rs  condition_check_node.rs  condition_nodes.rs  constant_value_node.rs  control_nodes.rs  core.rs  greater_than_condition_node.rs  heal_action_node.rs  lib.rs  mod.rs  number_tokens.rs  system.rs  (+4 more)
crates/battle/: Cargo.toml
crates/battle-core/: Cargo.toml
crates/battle-system/: Cargo.toml
crates/bevy-frontend/: Cargo.toml
crates/bevy-ui/: Cargo.toml
crates/combat-engine/: Cargo.toml
crates/game-logic/: Cargo.toml
crates/json-rule/: Cargo.toml
crates/node-core/: Cargo.toml
crates/rule-parser/: Cargo.toml
crates/rule-system/: Cargo.toml
crates/token-input/: Cargo.toml
crates/ui/: Cargo.toml
crates/ui-core/: Cargo.toml
design-docs/: language-core-system.md
rules/: enemy_rules.json  player_rules.json
src/: action_system.rs  battle_system.rs  game_logic.rs  main.rs  rule_input_model.rs  rule_loader.rs  ui.rs
src/action_system/: actions.rs  bool_tokens.rs  core.rs  mod.rs  number_tokens.rs  system.rs
src/core/: battle.rs  character.rs  mod.rs  skill.rs  stats.rs
(+191 files in other folders)
