[workspace]
members = [
    "crates/combat-engine",
    "crates/rule-parser",
    "crates/game-logic",
    "crates/bevy-frontend",
]

[package]
name = "hello-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16.0"
rand = "0.8.5"
combat-engine = { path = "crates/combat-engine" }
rule-parser = { path = "crates/rule-parser" }
game-logic = { path = "crates/game-logic" }
bevy-frontend = { path = "crates/bevy-frontend" }

