[workspace]
members = [
    "crates/action-system",
    "crates/json-rule",
    "crates/battle",
    "crates/ui",
]

[package]
name = "turn-based-rpg"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16.0"
rand = "0.8.5"
action-system = { path = "crates/action-system" }
json-rule = { path = "crates/json-rule" }
battle = { path = "crates/battle" }
ui = { path = "crates/ui" }

